# ietf-imap-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ietf_imap_mcp/: __init__.py  client.py  server.py
tests/: test_client.py  test_credentials.py  test_helpers.py
