[project]
name = "ietf-imap-mcp"
version = "0.1.0"
description = "MCP server for navigating IETF mailing-list archives over IMAP (imap.ietf.org)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Orie Steele" }]
keywords = ["mcp", "ietf", "imap", "mailing-list", "model-context-protocol"]
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ietf-imap-mcp = "ietf_imap_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ietf_imap_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
